# srp-file-processor

./: .gitignore  Actively Facilitating.ipynb  LICENSE  export_analyzer.ps1  pyproject.toml  readme.md  requirements.txt
.jupyter/custom/: custom.css
srp_file_processor/: analyzer.ipynb  analyzer.py  book1.ipynb  constants.py  dashboard.py  file_reader.py  grouping-current.ipynb  grouping-historical.ipynb  grouping.ipynb  main.py  process.py
